# worktrace-ai

./: .env.example  .gitignore  README.md  plan.md  pnpm-lock.yaml  rough_idea.md
docs/: AGENT_STATE.md  (+24 more)
services/local-agent/: pyproject.toml
services/local-agent/scripts/: evaluate_model.py  smoke_faster_whisper_local_path.py  smoke_gemma_e2b_report.py  smoke_paddleocr_sample.py  smoke_qwen_embedding.py  smoke_qwen_vl_selected_frame.py
services/local-agent/tests/: test_active_window_recorder_worker.py  test_active_window_simulation.py  test_ai_provider_config.py  test_ai_report_eval_benchmark.py  test_audio_embeddings.py  test_crash_recovery.py  test_dependency_policy.py  test_deterministic_timeline.py  test_dev_cloud_report_policy.py  test_evidence_cited_report.py  test_fake_session_flow.py  test_faster_whisper_runtime.py  test_faster_whisper_smoke_script.py  test_file_and_terminal_capture.py  test_file_watcher_worker.py  test_gemini_gemma_dev_provider.py  test_gemma_e2b_smoke_script.py  test_gemma_model_manifest.py  test_golden_sessions_eval.py  test_laptop_readiness_benchmark.py  test_local_ollama_report_provider.py  test_local_report_runtime.py  test_markdown_export.py  test_model_availability.py  test_model_cache.py  test_observability.py  test_ocr_runtime.py  test_packaging_entrypoint.py  test_paddleocr_smoke_script.py  test_portfolio_claim_discipline.py  test_privacy_controls.py  test_qwen_embedding_runtime.py  test_qwen_embedding_smoke_script.py  test_qwen_vl_runtime.py  test_qwen_vl_smoke_script.py  test_resource_budgets.py  test_screenshot_capture_worker.py  (+6 more)
(+165 files in other folders)
