[project]
name = "worktrace-local-agent"
version = "0.0.0"
description = "Local Python 3.13 storage and agent foundation for WorkTrace AI."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.1,<1",
    "google-genai>=1.0.0,<2",
    "pydantic>=2.13.3,<3",
    "uvicorn>=0.32.0,<1",
]

[project.optional-dependencies]
local-model-runtimes = [
    "accelerate>=1.13.0",
    "huggingface-hub>=1.14.0",
    "ollama>=0.6.2",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "safetensors>=0.7.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.57.0",
]

[project.scripts]
worktrace-local-agent = "worktrace_agent.__main__:main"
worktrace-laptop-readiness = "worktrace_agent.scripts.run_laptop_readiness_benchmark:main"

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29",
  "pyinstaller>=6.16.0,<7",
  "pyright>=1.1.409,<2",
  "pytest>=9.0.0,<10",
  "ruff>=0.15.0,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
package = true
